# Causal_SLAM

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README.ru.md  package.xml
ros1/causal_slam_ros1/: CMakeLists.txt  README.md  package.xml
ros1/causal_slam_ros1/config/: temporal_monitor.yaml
ros1/causal_slam_ros1/include/causal_slam_ros1/: point_cloud2_conversions.h
ros1/causal_slam_ros1/launch/: temporal_monitor.launch
src/causal_slam/: .gitignore  CMakeLists.txt  Makefile  README.md  causal_slam_architecture_snapshot.txt  package.xml
src/causal_slam/cmake/: CausalSlamLibraries.cmake
src/causal_slam/config/: gate.env.example  temporal_gate.yaml
src/causal_slam/docs/: ROS_COMPATIBILITY.md
src/causal_slam/launch/: temporal_gate.launch.py  temporal_gate_config.launch.py  temporal_gate_demo.launch.py
src/causal_slam/ros1/causal_slam_ros1/: CMakeLists.txt  README.md
src/causal_slam/ros1/causal_slam_ros1/include/causal_slam_ros1/: point_cloud2_conversions.h
src/causal_slam/ros1/causal_slam_ros1/src/: point_cloud2_conversions.cpp  temporal_monitor_node.cpp
src/causal_slam/scripts/: audit_ros1_adapter.py  audit_ros1_compatibility.py  check_arch_deps.py  runtime_stress_temporal_gate.sh  smoke_temporal_gate.sh
src/causal_slam/src/adapters/ros2/: point_cloud2_conversions.h  transform_lookup_adapter.cc  transform_lookup_adapter.h
src/causal_slam/src/application/temporal_monitor/: temporal_monitor_pipeline.cc  temporal_monitor_pipeline.h
src/causal_slam/src/apps/ros2/: temporal_monitor_node.cc  temporal_monitor_node.h  temporal_monitor_node_parameters.cc  temporal_monitor_node_parameters.h
src/causal_slam/src/config/: temporal_monitor_runtime_defaults.cc  temporal_monitor_runtime_defaults.h
src/causal_slam/src/core/: time_window.h
src/causal_slam/src/coverage/: imu_coverage_analyzer.cc  imu_coverage_analyzer.h  imu_sample_buffer.cc  imu_sample_buffer.h
src/causal_slam/src/diagnostics/: temporal_diagnostics.cc  temporal_diagnostics.h  temporal_fault_reason_formatter.cc  temporal_fault_reason_formatter.h
src/causal_slam/src/domain/diagnostics/: temporal_diagnostics.cc  temporal_fault_reason_formatter.cc
src/causal_slam/src/domain/model/: point_time_diagnostics.h
src/causal_slam/src/domain/sensors/imu/: imu_sample_buffer.cc
src/causal_slam/src/domain/sensors/lidar/: lidar_scan_timing.cc  lidar_scan_timing.h
src/causal_slam/src/domain/telemetry/: stream_timing_diagnostic.h  stream_timing_tracker.cc  stream_timing_tracker.h
src/causal_slam/src/domain/time/: time_units.h
src/causal_slam/src/lidar/: lidar_scan_timing.cc  lidar_scan_timing.h  lidar_scan_window_estimator.cc  lidar_scan_window_estimator.h
src/causal_slam/src/model/: temporal_observation.h
src/causal_slam/src/nodes/: fake_imu_publisher_node.cc  fake_lidar_publisher_node.cc  point_cloud_qos.hpp  point_cloud_rate_probe_node.cc  temporal_monitor_main.cc  temporal_monitor_node.cc  temporal_monitor_node.h  temporal_monitor_node_parameters.cc  temporal_monitor_node_parameters.h
src/causal_slam/src/pipeline/: temporal_monitor_pipeline.cc  temporal_monitor_pipeline.h
src/causal_slam/src/platform/: atomic_file_writer.cc
src/causal_slam/src/pointcloud/: point_cloud2_field_inspector.cc  point_cloud2_time_field_extractor.cc  point_cloud2_time_field_extractor.h
src/causal_slam/src/policy/: lidar_cloud_gate.cc  lidar_cloud_gate.h  map_update_decision.h
src/causal_slam/src/presentation/render/: console_temporal_summary_renderer.cc  console_temporal_summary_renderer.h  html_temporal_summary_renderer.cc  html_temporal_summary_renderer.h  map_update_decision_json_renderer.cc  map_update_decision_json_renderer.h
src/causal_slam/src/presentation/report/: temporal_report_builder.cc  temporal_report_builder.h
src/causal_slam/src/render/: console_temporal_summary_renderer.cc  console_temporal_summary_renderer.h  html_temporal_summary_renderer.cc  html_temporal_summary_renderer.h  map_update_decision_json_renderer.cc
src/causal_slam/src/report/: report_document.h  temporal_report_builder.cc  temporal_report_builder.h
src/causal_slam/src/ros_adapters/: point_cloud2_conversions.cc  point_cloud2_field_inspector.cc  point_cloud2_field_inspector.h  point_cloud2_time_field_extractor.cc  point_cloud2_time_field_extractor.h  transform_lookup_adapter.cc
src/causal_slam/src/statistics/: temporal_statistics.cc  temporal_statistics.h
src/causal_slam/src/telemetry/: imu_timing_tracker.cc  imu_timing_tracker.h  stream_timing_diagnostic.h  stream_timing_tracker.cc  stream_timing_tracker.h  temporal_health.h  temporal_stream.h
src/causal_slam/src/transform/: transform_age_analyzer.cc  transform_age_analyzer.h
src/causal_slam/tests/benchmarks/: point_time_extraction_benchmark.cc
src/causal_slam/tests/config/: temporal_monitor_runtime_defaults_test.cc
src/causal_slam/tests/coverage/: imu_coverage_analyzer_test.cc  imu_sample_buffer_test.cc
src/causal_slam/tests/diagnostics/: temporal_diagnostics_test.cc  temporal_fault_reason_formatter_test.cc
src/causal_slam/tests/lidar/: lidar_scan_timing_test.cc  lidar_scan_window_estimator_test.cc
src/causal_slam/tests/pipeline/: temporal_monitor_pipeline_test.cc
src/causal_slam/tests/pointcloud/: point_cloud2_field_inspector_test.cc  point_cloud2_time_field_extractor_test.cc
src/causal_slam/tests/policy/: lidar_cloud_gate_test.cc  map_update_decision_test.cc
src/causal_slam/tests/render/: console_temporal_summary_renderer_test.cc  html_temporal_summary_renderer_test.cc  map_update_decision_json_renderer_test.cc
src/causal_slam/tests/report/: temporal_report_builder_test.cc
src/causal_slam/tests/ros_adapters/: point_cloud2_field_inspector_test.cc  point_cloud2_time_field_extractor_test.cc
src/causal_slam/tests/statistics/: temporal_statistics_test.cc
src/causal_slam/tests/telemetry/: stream_timing_tracker_test.cc
src/causal_slam/tests/transform/: transform_age_analyzer_test.cc
src/causal_slam/tools/ros2/: imu_fault_injection_node.cc  point_cloud_rate_probe_node.cc
(+138 files in other folders)
