<?xml version="1.0"?>
<package format="2">
  <name>causal_slam_ros1</name>
  <version>0.0.0</version>
  <description>ROS1 Noetic adapter for Causal-SLAM temporal integrity monitor.</description>

  <maintainer email="ardislor@student.21-school.ru">orurh</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
